<resources>
    <string name="app_name">Proyecto41</string>
    <string name="login_title">Inicio de Sesión</string>
    <string name="username_hint">Usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="welcome_message">Bienvenido %1$s!!!</string>
    <string name="logout_button">Cerrar Sesión</string>
    <string name="empty_fields_error">Por favor, llena todos los campos</string>
    <string name="forgot_password_message">Funcionalidad de recuperación de contraseña no implementada</string>
    <string name="default_username">Usuario</string>
</resources>